--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Mukta:wght@700&family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet">
 
-    <title>Vite App</title>
+    <title>Web Chat</title>
   </head>
   <body>
     <div id="root"></div>
